--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.6",
+    "generic-json-sanitizer": "^1.0.2",
+    "helmet": "^4.4.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
@@ -43,6 +46,7 @@
     "@types/body-parser": "^1.19.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/express-rate-limit": "^5.1.1",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mongodb": "^3.6.12",
     "@types/node": "^14.14.37",
