--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "helmet": "^4.4.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash.debounce": "^4.0.8",
     "log4js": "^6.3.0",
     "mongodb": "^3.6.6",
     "node-fetch": "^2.6.1",
@@ -39,6 +40,7 @@
     "swagger-ui-express": "^4.1.6",
     "tsoa": "^3.6.1",
     "typeorm": "^0.2.32",
+    "unitsnet-js": "^1.0.20",
     "uuid": "^8.3.2",
     "ws": "^7.4.4"
   },
@@ -48,6 +50,7 @@
     "@types/express": "^4.17.11",
     "@types/express-rate-limit": "^5.1.1",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/mongodb": "^3.6.12",
     "@types/node": "^14.14.37",
     "@types/node-fetch": "^2.5.10",
