--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash.debounce": "^4.0.8",
     "log4js": "^6.3.0",
     "mongodb": "^3.6.6",
+    "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
     "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
