Add gitlab support

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,7 @@ GITHUB_CLIENT_ID=""
 GITHUB_SECRET=""
 GOOGLE_CLIENT_ID=""
 GOOGLE_SECRET=""
+GITLAB_CLIENT_ID=""
+GITLAB_SECRET=""
 JWT_SECRET=""
 JWT_EXPIRES_IN="30 days"
