--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ GITLAB_CLIENT_ID=""
 GITLAB_SECRET=""
 JWT_SECRET=""
 JWT_EXPIRES_IN="30 days"
+ALLOW_DASHBOARD_ORIGINS="http://127.0.0.1:8080,http://localhost:8080"
+NODE_ENV='development'
