--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/coffee-paste/coffee-paste-backend#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -35,6 +36,7 @@
     "lodash.debounce": "^4.0.8",
     "log4js": "^6.3.0",
     "mongodb": "^3.6.6",
+    "ms": "^2.1.3",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
     "reflect-metadata": "^0.1.13",
@@ -47,12 +49,14 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/express-rate-limit": "^5.1.1",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash.debounce": "^4.0.6",
     "@types/mongodb": "^3.6.12",
+    "@types/ms": "^0.7.31",
     "@types/node": "^14.14.37",
     "@types/node-fetch": "^2.5.10",
     "@types/swagger-ui-express": "^4.1.2",
