--- a/.github/workflows/coffee-paste-backend.yml
+++ b/.github/workflows/coffee-paste-backend.yml
@@ -18,7 +18,7 @@ jobs:
       run: |
         npm install
         npm run build
-    - uses: actions/upload-artifact@v2
-      with:
-        name: swagger-spec
-        path: dist/swagger.json
+    # - uses: actions/upload-artifact@v2
+    #   with:
+    #     name: swagger-spec
+    #     path: dist/swagger.json
