Update and fix mongodb reconnection

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ JWT_EXPIRES_IN="30 days"
 ALLOW_DASHBOARD_ORIGINS="http://127.0.0.1:8080,http://localhost:8080"
 NODE_ENV='development'
 API_KEY=""
+PORT="3000"
