Add encryption on client side suprted API's - Open paging notes API to backlog/workspace/all notes - Add set note ecryption method API - Add get/regenerate key for saving local password sucurly in the local storage - Add API to mark new password/certificate new version - Hold the user local password key encypted in the DB

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ GOOGLE_SECRET=""
 GITLAB_CLIENT_ID=""
 GITLAB_SECRET=""
 JWT_SECRET=""
+LOCAL_KEYS_ENCRYPTION_KEY=""
 JWT_EXPIRES_IN="30 days"
 ALLOW_DASHBOARD_ORIGINS="http://127.0.0.1:8080,http://localhost:8080"
 NODE_ENV='development'
