--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.2.6",
@@ -43,14 +44,16 @@
     "swagger-ui-express": "^4.1.6",
     "tsoa": "^3.6.1",
     "typeorm": "^0.2.32",
+    "unique-names-generator": "^4.5.0",
     "unitsnet-js": "^1.0.20",
     "uuid": "^8.3.2",
-    "ws": "^7.4.4"
+    "ws": "^7.4.6"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
+    "@types/crypto-js": "^4.0.1",
     "@types/express": "^4.17.11",
     "@types/express-rate-limit": "^5.1.1",
     "@types/jsonwebtoken": "^8.5.1",
