--- a/.github/workflows/coffee-paste-backend.yml
+++ b/.github/workflows/coffee-paste-backend.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         npm install
         npm run build
+        npm run lint
     # - uses: actions/upload-artifact@v2
     #   with:
     #     name: swagger-spec
