Fixing Encryption parts

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,15 @@
         "sourceMaps": true,
         "smartStep": true,
         "outFiles": ["${workspaceFolder}/dist/**/*.js"]
+      },
+      {
+        "name": "Attach by Process ID",
+        "processId": "${command:PickProcess}",
+        "request": "attach",
+        "skipFiles": [
+          "<node_internals>/**"
+        ],
+        "type": "pwa-node"
       }
     ]
   }
